--- a/pemrogamanweb/tugas1/login/style.css
+++ b/pemrogamanweb/tugas1/login/style.css
@@ -26,7 +26,8 @@ button {
 }
 
 button:hover {
-    background: #8e8e8e;
+    color: black;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(231,73,148,1) 0%, rgba(0,249,255,1) 100%);
 }
 
 .layout {
